# neutronix

./: .gitignore  README.md  pyproject.toml
neutronix/: __init__.py
neutronix/optimizers/: __init__.py  gradient_ascent.py  gradient_descent.py
neutronix/supervised/: __init__.py  gda.py  linear_regression.py  logistic_regression.py  lwlr.py  naive_bayes.py  perceptron.py  softmax_regression.py
neutronix/unsupervised/: __init__.py  factor_analysis.py  gmm.py  kmeans.py  pca.py
