[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neutronix"
version = "1.0"
authors = [
  { name="Nirusaki", email="nirusakimalaal@gmail.com" },
]
description = "A Simple to Use Machine Learning Library"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-only"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "numpy",
]